--- a/jpa-examples/pom.xml
+++ b/jpa-examples/pom.xml
@@ -83,6 +83,17 @@
 			<artifactId>hsqldb</artifactId>
 			<version>2.2.6</version>
 		</dependency>
+		<!--  misc -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>jsr250-api</artifactId>
+			<version>1.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>${project.artifactId}</finalName>
