enahnce datatype with validation

--- a/jpa-examples/pom.xml
+++ b/jpa-examples/pom.xml
@@ -51,6 +51,11 @@
 			<artifactId>zkplus</artifactId>
 			<version>${zk.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.zkoss.zk</groupId>
+			<artifactId>zkmax</artifactId>
+			<version>${zk.version}</version>
+		</dependency>
 		<!-- Spring 3 dependencies -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -77,12 +82,28 @@
 	  		<groupId>org.hibernate</groupId>
 	  		<artifactId>hibernate-entitymanager</artifactId>
 	  		<version>4.0.0.Final</version>
-	  	</dependency>
+	  	</dependency>			
 		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
 			<version>2.2.6</version>
 		</dependency>
+		<!-- Hibernate validation) dependencies -->
+		<dependency>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-validator</artifactId>
+		    <version>4.0.2.GA</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.slf4j</groupId>
+		    <artifactId>slf4j-api</artifactId>
+		    <version>1.6.1</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.slf4j</groupId>
+		    <artifactId>slf4j-log4j12</artifactId>
+		    <version>1.6.1</version>
+		</dependency>		
 		<!--  misc -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
